# sms-tools

./: .flake8  .git-blame-ignore-revs  .gitignore  AUTHORS  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Codes/: GenSpecSines.py  SMS_GUI.py  UtilityFunctions.c  cUtilityFunctions.c  f0detectiontwm.py  genbh92lobe.py  harmonicmodel.py  hprmodel.py  hps.py  hpsGui.py  hpsGui_nothread.py  hpsGui_thread.py  hpsmodel.py  hpsmodelparams.py  hpsmorph.py  sinemodel.py  sps.py  sps_plot.py  spstimescale.py  stft.py  stft_peaks.py  stochasticmodel.py
assignments/: README.txt
examples/: cello-double-separation.py  cello-phrase-example.py  dftModel-example.py  dftModel_example.py  f0-analysis-example.py  f0-piano.py  harmonicModel-example.py  harmonicModel_example.py  hprModel-example.py  hprModel_example.py  hpsModel-example.py  hpsModel_example.py  sax-phrase-hps-pitch-shift.py  sax-phrase-hps-timescale.py  sax-phrase-hps.py  sax-phrase-transformation.py  sax-phrase.py  sineModel-example.py  sineModel_example.py  speech-female.py  speech-male.py  sprModel-example.py  sprModel_example.py  spsModel-example.py  spsModel_example.py  stft-example.py  stft_example.py  stochasticModel-example.py  stochasticModel_example.py
exercises/: E1-Python-and-sounds.html  E1-Python-and-sounds.ipynb  E10-1-Music-piece.html  E10-1-Music-piece.ipynb  E10-2-Music-description.html  E10-2-Music-description.ipynb  E10-3-Multiresolution.html  E10-3-Multiresolution.ipynb  E2-Sinusoids-and-DFT.html  E3-Fourier-properties.html  E4-STFT.html  E5-Sinusoidal-model.html  E5-Sinusoidal-model.ipynb  E6-Harmonic-model.html  E6-Harmonic-model.ipynb  E7-Sinusoidal-plus-residual-model.html  E7-Sinusoidal-plus-residual-model.ipynb  E8-Sound-transformations.html  E9-Sound-and-music-description.html  E9-Sound-and-music-description.ipynb
gui/: GUI.py  dftModel_frame.py  harmonicModel_frame.py  hprModel_frame.py  hpsModel_frame.py  sineModel_frame.py  sprModel_frame.py  spsModel_frame.py  stft_frame.py  stochasticModel_frame.py
lectures/: README.txt
(+976 files in other folders)
