[project]
name = "SMSTools"
version = "0.99"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Skip unneeded wheels: PyPy, python 3.6-3.8, linux 32 bit, PPC, s390
skip = ["pp*", "cp36*", "cp37*", "cp38", "*i686*", "*ppc64le*", "*s390x*"]
